--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700;800&display=swap" rel="stylesheet">
     
-    <!-- Link to your CSS file -->
-    <link rel="stylesheet" href="./style.css">
+    <!-- Link to your CSS file (FIXED PATH for GitHub Pages) -->
+    <link rel="stylesheet" href="style.css">
 </head>
 <body class="antialiased">
 
@@ -172,7 +172,7 @@
         </div>
     </div>
 
-    <!-- Scripts -->
+    <!-- Scripts (FIXED PATH for GitHub Pages) -->
     <script src="https://unpkg.com/lucide@latest"></script>
     <script src="script.js"></script>
 
